--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,10 @@ classifiers = [
 dependencies = [
     "tbp.monty", # imported via conda (thousandbrainsproject::tbp.monty)
 ]
-description = "Paper repository template" # TODO: Update this description
+description = "Floppy is a Python framework for analyzing and counting floating-point operations (FLOPs)."
 dynamic = ["version"]
 license = { file = "LICENSE" }
-name = "tbp.monty_paper" # TODO: Update this name
+name = "tbp.floppy"
 readme = "README.md"
 
 [project.optional-dependencies]
@@ -39,8 +39,8 @@ dev = [
 ]
 
 [project.urls]
-Repository = "https://github.com/thousandbrainsproject/tbp.monty_paper" # TODO: Update this URL
-Issues = "https://github.com/thousandbrainsproject/tbp.monty_paper/issues" # TODO: Update this URL
+Repository = "https://github.com/thousandbrainsproject/tbp.floppy" 
+Issues = "https://github.com/thousandbrainsproject/tbp.floppy/issues" 
 
 [tool.deptry]
 exclude = ["venv", "\\.venv", "\\.direnv", "\\.git", "setup\\.py"]
